--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
     <name>AWSV4Auth Extension</name>
 
     <parent>
-        <groupId>org.mule.extensions</groupId>
-        <artifactId>mule-modules-parent</artifactId>
-        <version>1.1.3</version>
+        <groupId>org.mule.connectors</groupId>
+        <artifactId>mule-certified-parent</artifactId>
+        <version>1.2.5-SNAPSHOT</version>
     </parent>
 
     <distributionManagement>
@@ -22,7 +22,7 @@
             <uniqueVersion>false</uniqueVersion>
             <id>exchange-server</id>
             <name>Demos Repository</name>
-            <url>https://maven.anypoint.mulesoft.com/api/v1/organizations/${groupId}/maven</url>
+            <url>https://maven.anypoint.mulesoft.com/api/v1/organizations/${project.groupId}/maven</url>
             <layout>default</layout>
         </repository>
     </distributionManagement>
