--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <!--<groupId>com.dejim</groupId>-->
     <groupId>b85b361d-0842-4b70-af37-2723c2c3ae7e</groupId>
     <artifactId>awsv4auth-extension</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.4</version>
     <packaging>mule-extension</packaging>
     <name>AWSV4Auth Extension</name>
 
@@ -26,6 +26,19 @@
             <layout>default</layout>
         </repository>
     </distributionManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
