--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
     <!--  You should replace the group id below with your organization id in anypoint -->
     <groupId>b85b361d-0842-4b70-af37-2723c2c3ae7e</groupId>
     <artifactId>awsv4auth-extension</artifactId>
-    <version>1.0.9</version>
+    <version>1.1.0</version>
     <packaging>mule-extension</packaging>
-    <name>AWSV4Auth Extension</name>
+    <name>Amazon AWS Signature Version 4</name>
 
     <parent>
         <groupId>org.mule.extensions</groupId>
